@@ -1,4 +1,8 @@
-* Mon Nov 27 2017 Nick Miller <nick.millwe@onyxpoint.com> - 0.0.1
+* Fri Dec 29 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
+- Ensure that the docker_group and socket_group options are the same by default
+  for the 'redhat' release type
+
+* Mon Nov 27 2017 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
 - Wrap puppetlabs/docker to:
   - Provide SIMP defaults
   - Add ease-of-use for using different distributions of Docker
